--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  border: none;
   font-family:
     Inter,
     -apple-system,
@@ -15,6 +16,7 @@ body {
     Fira Sans,
     Droid Sans,
     sans-serif;
+    height: 100vh;
 }
 
 a {
