--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,34 +1,47 @@
-html,
+* {
+    font-family:
+        Inter,
+        -apple-system,
+        Helvetica Neue,
+        Arial,
+        BlinkMacSystemFont,
+        Segoe UI,
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        Fira Sans,
+        Droid Sans,
+        sans-serif;
+    box-sizing: border-box;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  border: none;
-  font-family:
-    Inter,
-    -apple-system,
-    Helvetica Neue,
-    BlinkMacSystemFont,
-    Segoe UI,
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    Fira Sans,
-    Droid Sans,
-    sans-serif;
-    height: 100vh;
+    padding: 0;
+    margin: 0;
+    background: #333;
+    color: hsl(200, 100%, 90%);
+}
+
+body {
+    background-color: rgb(8, 60, 60);
+    background-image: linear-gradient(to bottom,
+            rgba(45, 3, 47, 0.834),
+            rgba(11, 11, 60, 0.788)), url('/images/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    min-height: 100vh;
+    padding-bottom: 2rem;
+    overflow-y: auto;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+    color: inherit;
+    text-decoration: none;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+    max-width: 100%;
+    height: auto;
 }
